--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     },
     "devDependencies": {
         "connect-history-api-fallback": "^1.5.0",
+        "css-loader": "^0.28.11",
         "eslint": "^4.19.1",
         "eventsource-polyfill": "^0.9.6",
         "express": "^4.16.3",
         "html-webpack-plugin": "^3.2.0",
+        "node-sass": "^4.9.0",
+        "sass-loader": "^7.0.1",
         "ts-loader": "^4.2.0",
         "typescript": "^2.8.1",
         "vue-class-component": "^6.2.0",
