--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,9 +19,6 @@
         "baseUrl": "."
     },
     "include": [
-        "./types/**/*.d.ts",
-        "./src/**/*.js",
-        "./src/**/*.ts",
-        "./src/**/*.vue"
+        "./src/**/*"
     ]
 }
