--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,9 @@
         "sourceMap": true,
         "strict": true,
         "noImplicitReturns": true,
-        "module": "es2015",
+        "module": "esnext",
         "moduleResolution": "node",
-        "target": "es5",
+        "target": "esnext",
         "allowJs": true,
         "experimentalDecorators": true,
         "strictPropertyInitialization": false,
