--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "eslint": "^4.19.1",
         "eventsource-polyfill": "^0.9.6",
         "express": "^4.16.3",
+        "file-loader": "^1.1.11",
         "html-webpack-plugin": "^3.2.0",
         "node-sass": "^4.9.0",
         "sass-loader": "^7.0.1",
