--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "dependencies": {
         "axios": "~0.18.0",
         "vue": "^2.5.16",
-        "vue-i18n": "^7.6.0",
+        "vue-i18n": "^7.7.0",
         "vue-router": "^3.0.1",
         "vuex": "^3.0.1",
         "vuex-router-sync": "^5.0.0"
@@ -36,14 +36,16 @@
         "node-sass": "^4.9.0",
         "sass-loader": "^7.0.1",
         "ts-loader": "^4.2.0",
+        "tslint": "^5.10.0",
+        "tslint-loader": "^3.6.0",
         "typescript": "^2.8.1",
         "vue-class-component": "^6.2.0",
         "vue-loader": "^14.2.2",
         "vue-property-decorator": "^6.0.0",
         "vue-template-compiler": "^2.5.16",
-        "webpack": "^4.5.0",
+        "webpack": "^4.8.3",
         "webpack-dev-middleware": "^3.1.2",
-        "webpack-hot-middleware": "^2.21.2"
+        "webpack-hot-middleware": "^2.22.2"
     },
     "engines": {
         "node": ">= 8.0.0",
