--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Vue boilerplate with TypeScript for developing small to large, easy to scale, Single Page Applications.",
     "scripts": {
         "start": "node scripts/dev-server.js",
-        "build": "node scripts/build.js",
+        "build": "NODE_ENV=production node scripts/build.js",
         "test": "echo \"Error: no tests created\" && exit 1"
     },
     "repository": {
@@ -26,14 +26,17 @@
         "vuex-router-sync": "^5.0.0"
     },
     "devDependencies": {
+        "clean-webpack-plugin": "^0.1.19",
         "connect-history-api-fallback": "^1.5.0",
         "css-loader": "^0.28.11",
-        "eslint": "^4.19.1",
         "eventsource-polyfill": "^0.9.6",
         "express": "^4.16.3",
         "file-loader": "^1.1.11",
         "html-webpack-plugin": "^3.2.0",
+        "mini-css-extract-plugin": "^0.4.0",
         "node-sass": "^4.9.0",
+        "optimize-css-assets-webpack-plugin": "^4.0.1",
+        "ora": "^2.1.0",
         "sass-loader": "^7.0.1",
         "ts-loader": "^4.2.0",
         "tslint": "^5.10.0",
@@ -41,8 +44,8 @@
         "typescript": "^2.8.1",
         "uglifyjs-webpack-plugin": "^1.2.5",
         "vue-class-component": "^6.2.0",
-        "vue-loader": "^14.2.2",
-        "vue-property-decorator": "^6.0.0",
+        "vue-loader": "^15.1.0",
+        "vue-property-decorator": "^6.1.0",
         "vue-template-compiler": "^2.5.16",
         "webpack": "^4.8.3",
         "webpack-dev-middleware": "^3.1.2",
